[gd_scene load_steps=7 format=3 uid="uid://djlxg4jk0xhtp"]

[ext_resource type="Script" path="res://Scripts/entre_oleadas.gd" id="1_jwmne"]
[ext_resource type="Texture2D" uid="uid://cutglkclquwmw" path="res://Sprites/Final/siguienteOleada.png" id="2_x22x5"]
[ext_resource type="Texture2D" uid="uid://dspp2ao1y47b1" path="res://Sprites/Final/vendedor.png" id="3_wmnen"]
[ext_resource type="FontFile" uid="uid://b6d4iwri5lpd5" path="res://FontNES.ttf" id="4_07tux"]
[ext_resource type="PackedScene" uid="uid://brewgxhcwxuiw" path="res://Scenes/tienda.tscn" id="4_fxxvb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hfcr"]

[node name="EntreOleadas" type="Node2D"]
script = ExtResource("1_jwmne")

[node name="botonSiguienteOleada" type="Area2D" parent="."]
position = Vector2(480, 359)
scale = Vector2(4, 4)

[node name="Sprite2D" type="Sprite2D" parent="botonSiguienteOleada"]
texture = ExtResource("2_x22x5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="botonSiguienteOleada"]
shape = SubResource("RectangleShape2D_4hfcr")

[node name="botonTienda" type="Area2D" parent="."]
position = Vector2(285, 468)
scale = Vector2(4, 4)

[node name="Sprite2D" type="Sprite2D" parent="botonTienda"]
texture = ExtResource("3_wmnen")

[node name="CollisionShape2D" type="CollisionShape2D" parent="botonTienda"]
shape = SubResource("RectangleShape2D_4hfcr")

[node name="LabelOleada" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 601.0
offset_right = 1024.0
offset_bottom = 891.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_07tux")
theme_override_font_sizes/font_size = 25
text = "END STAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tienda" parent="." instance=ExtResource("4_fxxvb")]
visible = false

[connection signal="hoverBotonTienda" from="." to="Tienda" method="_on_entre_oleadas_hover_boton_tienda"]
[connection signal="body_entered" from="botonSiguienteOleada" to="." method="_on_boton_siguiente_oleada_body_entered"]
[connection signal="body_entered" from="botonTienda" to="." method="_on_boton_tienda_body_entered"]
[connection signal="compra" from="Tienda" to="." method="_on_tienda_compra"]
